Added repo manifest.

--- a/.gitmodules
+++ b/.gitmodules
@@ -30,6 +30,10 @@
 	branch = master
 	path = external/compiler-rt
 	url = ../external/compiler-rt
+[submodule "external/golang-protobuf"]
+	branch = master
+	path = external/golang-protobuf
+	url = ../external/golang-protobuf
 [submodule "external/googletest"]
 	branch = master
 	path = external/googletest
